Enlarge navbar logo (small variant)

--- a/styles/eurostat-responsive.css
+++ b/styles/eurostat-responsive.css
@@ -88,3 +88,10 @@
     margin-left: 0;
   }
 }
+
+/* Navbar logo sizing */
+.navbar-brand-logo img,
+.navbar-brand-logo {
+  max-height: 48px;
+  width: auto !important;
+}
